# cpp-json-schema-validation-errors

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  test.cpp
resources/: schema_2.json
